# medfact-bench

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/eval/: zero-shot.toml
docs/: training-roadmap.md
docs/results/: llama-3.2-3b-instruct-medfact-report.json  qwen2.5-3b-instruct-medfact-report.json  run-manifest.json  zero-shot-small-models.md
medfact_bench/: __init__.py  constants.py  environment.py  reporting.py  taskset.py
src/medfact_bench/: core.py  harness.py  taskset.py
tests/: test_core.py  test_reporting.py  test_taskset.py
