[project]
name = "medfact-bench"
version = "0.1.0"
description = "Paper-faithful zero-shot evaluation and reporting for MedFact-Bench"
authors = [
    { name = "Kouate Muhamed", email = "muhamed.kouate@icloud.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
tags = ["medical", "fact-verification", "evidence-attribution", "evaluation"]
dependencies = [
    "datasets>=4.2.0,<5",
    "verifiers>=0.2.0,<0.3",
    "renderers==0.1.8.dev58",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/KouateMuhamed/medfact-bench"
Repository = "https://github.com/KouateMuhamed/medfact-bench"
Issues = "https://github.com/KouateMuhamed/medfact-bench/issues"

[project.scripts]
medfact-report = "medfact_bench.reporting:main"

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["medfact_bench"]

[tool.hatch.build.targets.sdist]
include = [
    "/medfact_bench",
    "/tests",
    "/configs",
    "/docs",
    "/README.md",
    "/CHANGELOG.md",
    "/CITATION.cff",
    "/LICENSE",
    "/NOTICE",
    "/pyproject.toml",
]

[tool.verifiers.eval]
num_examples = -1
rollouts_per_example = 1
max_tokens = 1024
temperature = 0

[tool.uv]
prerelease = "allow"
constraint-dependencies = ["verifiers==0.2.0"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "integration: tests requiring the local MedFact-Bench Parquet dataset",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
